Fix alignment of print list button

--- a/fridgefiller/static/css/style.css
+++ b/fridgefiller/static/css/style.css
@@ -86,8 +86,7 @@
 #print-button {
     font-size: 16px;
     display: inline;
-    vertical-align: middle;
-    padding-bottom: 3px;
+    vertical-align: -webkit-baseline-middle;
 }
 
 hr {
